--- a/top/special/js/common.css
+++ b/top/special/js/common.css
@@ -5,6 +5,8 @@ padding:4px 12px;
 
 select, input, button, textarea {
     font: 100% Tahoma,Helvetica,Arial,sans-serif;
+    width: 101px;
+    height: 22px;
 }
 
 body
