--- a/Soft/dedecms/taobao1/images/css.css
+++ b/Soft/dedecms/taobao1/images/css.css
@@ -159,6 +159,10 @@ a:active
 	border-bottom: #cccccc 1px solid;
 	margin-top: 10px;
 }
+#topclass div ul li.color
+{
+	color: #f2650d;
+}
 #topclass1
 {
 	float: left;
